cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/AmazonScience__Multi-IaC-Eval/multi_iac_eval__task_101.yaml
Description: |
  This stack automates the creation of an EC2 Instance with an additional security group for enhanced security.

Parameters:
  LatestAmiId:
    Description: Region specific image from the Parameter Store
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"

  Subnet:
    Description: The subnet to put the instance into
    Type: AWS::EC2::Subnet::Id

Resources:

  # An IAM role to be assumed by the ec2 service
  IamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Actions:
          - sts:AssumeRole
      Path: "/"

  # The instance profile to be assumed by the instance
  IamProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref IamRole
      Path: "/"

  # A security group to control inbound and outbound traffic
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EC2 instance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

  # An EC2 Instance using the latest Amazon Linux 2 AMI
  Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      SubnetId: !Ref Subnet
      Monitoring: true
      IamInstanceProfile: !Ref IamProfile
      EbsOptimized: true
      NetworkInterfaces:
        - DeviceIndex: 0
          SubnetId: !Ref Subnet
          Groups:
            - !Ref SecurityGroup
